[package]
name = "nu_plugin_toon"
version = "25.1090.0"
edition = "2024"

description = "Nushell plugin for TOON format (Token-Oriented Object Notation)"
readme = "README.md"
repository = "https://github.com/bizmythy/nu_plugin_toon"
license = "MIT"

[dependencies]
nu-plugin = "0.108.0"
nu-protocol = { version = "0.108.0", features = ["plugin"] }
base64 = "0.22.1"
json2toon_rs = "0.2.0"
toon = "0.1.2"
